--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>sjf-cuke</name>
+  <name>GNJFrame</name>
   <url>http://www.dminc.com/</url>
 
   <properties>
